--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_deploy:
   - git tag $TRAVIS_TAG --force
 deploy:
   provider: releases
-  api_key: $GITHUB_TOKEN
+  api_key: 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
   file_glob: true
   file: ${TRAVIS_BUILD_DIR}${REPO}-${BUILD_ENV}-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.tar.gz
   skip_cleanup: true
