--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: node_js
-node_js:
-  - "stable"
+node_js: '10'
 cache: npm
-script:
-  - npm run test
-install:
-  - npm ci
+script: npm run travis
+install: npm ci
 before_deploy:
   - git config --local user.name "tzahy4530"
   - git config --local user.email "tzahy4530@gmail.com"
@@ -13,7 +10,7 @@ before_deploy:
   - git tag $TRAVIS_TAG --force
 deploy:
   provider: releases
-  api_key: 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
+  api_key: $GITHUB_TOKEN
   file_glob: true
   file: ${TRAVIS_BUILD_DIR}${REPO}-${BUILD_ENV}-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.tar.gz
   skip_cleanup: true
@@ -21,7 +18,7 @@ deploy:
     tags: false
   branches:
     only:
-    - travis_test
+    - main
 
 
 # before_install:
