Auth Change for Tests & Server

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "soccer_project",
-  "jest":{
-    "setupFilesAfterEnv": ["<rootDir>/tests/setupTests.js"]
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setupTests.js"
+    ]
   },
   "version": "1.0.0",
   "description": "",
@@ -10,18 +12,18 @@
     "test": "tests"
   },
   "dependencies": {
+    "axios-cookiejar-support": "^1.0.1",
     "bcryptjs": "^2.4.3",
+    "client-sessions": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "client-sessions": "^0.8.0",
     "morgan": "^1.10.0",
     "mssql": "^7.1.0"
   },
   "devDependencies": {
     "jest": "^27.0.3"
   },
-
   "scripts": {
     "test": "jest"
   },
