--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jest": "^27.0.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --maxWorkers 1"
   },
   "repository": {
     "type": "git",
