--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "heroku": "^7.54.0",
     "morgan": "^1.10.0",
     "mssql": "^7.1.0",
     "travis": "^0.1.1"
@@ -27,7 +28,8 @@
   },
   "scripts": {
     "test": "jest --maxWorkers 1",
-    "travis": "npm run test"
+    "travis": "npm run test",
+    "start": "nodemon ./project/main.js"
   },
   "repository": {
     "type": "git",
